--- a/css/media.css
+++ b/css/media.css
@@ -222,7 +222,7 @@
 		padding:0;
 		margin: 0;
 		color: #000;
-		background-color:#EEEEEE;
+		background-color:#fff;
 		-webkit-transition:none;
 		-o-transition: none;
 		transition: none;
